--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,11 +1,67 @@
-<meta charset="UTF-8">
+<meta charset="UTF-8" />
 <Title> Case Maker </Title>
-
-<meta name="viewport" content="width=device-width, initial-scale=1.0" >
+<link rel="preconnect" href="https://fonts.gstatic.com" />
+<link
+  href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap"
+  rel="stylesheet"
+/>
+<link
+  rel="icon"
+  href="https://ik.imagekit.io/wgluqxvtial/Logo_bgtyxUzkw.png?updatedAt=1631148773286"
+/>
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <style>
   body {
-    padding: 5hv 10%;
-    padding-top: 50px;
+    width: 100vw;
+    height: 100vh;
+
+    padding-top: 10%;
   }
-</style> 
-<link rel="stylesheet" type="text/css" href="css/style.css">
+
+  .containerMain {
+    background-color: #202a36;
+    font: 400 'Poppins', sans-serif;
+    color: #d1d1d1;
+  }
+
+  .title {
+    color: #f6f6f6;
+    font-weight: 600;
+
+    margin-bottom: 2.15rem;
+  }
+
+  .info {
+    font-size: 16px;
+  }
+
+  .btn-confirm {
+    background-color: #00d172;
+    border: none;
+    border-radius: 4px;
+
+    color: #f6f6f6;
+    font: 500 16px 'Poppins', sans-serif;
+
+    padding: 7px 27px;
+    margin: 24px 0 36px;
+
+    align-self: flex-end;
+    transition: 0.2s ease;
+  }
+  .btn-confirm:hover {
+    cursor: pointer;
+    filter: brightness(0.8);
+  }
+
+  .form {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .input {
+    font: 400 16px 'Poppins', sans-serif;
+    height: 40px !important;
+  }
+</style>
+<link rel="stylesheet" type="text/css" href="css/style.css" />
