Atualiza validacao usuario

--- a/views/recovery/index.ejs
+++ b/views/recovery/index.ejs
@@ -11,8 +11,12 @@
     <div class="container containerMain">
       <div class="row">
         <div class="col-sm-4 col-sm-offset-4">
+          <h5 class="andamento">PAGINA EM DESENVOLVIMENTO!</h5>
+          <br>
           <h2 class="title">Recuperar Senha</h2>
           <p class="info">
+            
+            
             Digite seu email para receber as instruções de como reiniciar a sua
             senha
           </p>
