--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -17,7 +17,9 @@
 
     padding-top: 10%;
   }
-
+  .andamento {
+    color: #9b1212;
+  }
   .containerMain {
     background-color: #202a36;
     font: 400 'Poppins', sans-serif;
